stop scroll on clipping and mobile ajust

--- a/wp-content/themes/nannacay/src/scss/clippings.scss
+++ b/wp-content/themes/nannacay/src/scss/clippings.scss
@@ -145,14 +145,22 @@
         align-items: center;
 
         .info {
-          width: 300px;
+
+          height: 420px;
+          margin-top: -30px;
+
+          @media (min-width: 1000px) {
+            height: 550px;
+            margin-top: -50px;
+          }
 
           @media (min-width: 1920px) {
-            width: responsive(400, 700, 1920, 2560);
+            height: responsive(600, 800, 1920, 2560);
+            margin-top: responsive(-60, -70);
           }
 
           .clipping_image_modal {
-            width: 100%;
+            height: 100%;
           }
         }
 
